[package]
name = "seed"
version = "0.1.0"
authors = ["Steven Black <steveb@stevenblack.com>"]
license = "MIT"
homepage = "https://github.com/StevenBlack/seed"
repository = "https://github.com/StevenBlack/seed"
documentation = "https://github.com/StevenBlack/seed"
description = "Bitcoin wallet seed CLI."
keywords = [ "crypto", "bitcoin", "wallet" ]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
hex = "0.4"
rust-base58 = "*"
